--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,75 +1,156 @@
 @charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body, html {
-    background-color: rgb(216, 216, 216);
-    font-family: "Funnel Sans", sans-serif;
+  background-color: rgb(216, 216, 216);
+  font-family: "Funnel Sans", sans-serif;
 }
 
 header {
-    background-color: #000080;
-    color: rgb(230, 230, 230);
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 150px;
-    z-index: 1000;
-    padding: 0 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: #000080;
+  color: rgb(230, 230, 230);
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 header h1 {
-    font-size: 60px;
-    font-weight: bolder;
-    padding: 10px;
-    color: white;
-    text-align: center;
+  color: white;
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.473);
+  font-size: 60px;
+  font-weight: bolder;
+  padding: 10px 20px 0;
+  margin-top: 10px;
+  text-align: center;
+  width: 100%;
 }
 
 menu {
-    width: 100%;
+  width: 100%;
 }
 
 menu ul {
-    display: flex;
-    justify-content: flex-start; /* alinha os itens à esquerda */
-    align-items: center;
-    gap: 20px;
-    list-style: none;
-    padding-left: 30px;
-    margin: 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 3px;
+  list-style: none;
+  padding: 0;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 15px;
 }
 
 menu li {
-    display: flex;
-    align-items: center;
-    padding: 10px;
+  border-radius: 10px;
+  padding: 8px 10px;
+}
+
+menu li:hover {
+  background-color: #010183;
+  transition: 0.5ms;
 }
 
 menu li a {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    font-size: 20px;
-    color: rgb(230, 230, 230);
-    text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  font-size: 18px;
+  color: rgb(230, 230, 230);
+  text-decoration: none;
 }
 
 .material-icons,
 .material-symbols-outlined {
-    font-size: 24px;
+  font-size: 18px;
+  margin-top: 4px;
 }
 
-.search {
-    justify-content: end;
+#search:hover {
+  background-color: #000080;
+  transition: 0.2s;
+}
+
+.noticia-container {
+  background-color: white;
+  border: 1px solid rgb(192, 192, 192);
+  border-radius: 5px;
+  padding: 5px;
+  margin: 10px 10px;
+  width: 94.9%;
+  height: 150px;
+}
+
+.noticia-container .categoria {
+  color: rgb(43, 43, 43);
+  font-style: italic;
+  border-bottom: 1px solid transparent;
+}
+
+.noticia-container .titulo {
+  color: #000080;
+  font-size: 25px;
+  margin-left: 5px;
+}
+
+.noticia-container .subititulo {
+  font-size: 15px;
+  color: black;
+  margin-left: 5px;
+}
+
+/*
+.noticia-container .imagem {
+  background-image: url();
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+  width: 100%;
+  height: 300px;
+} */ 
+
+.noticia-container .imagem > h1,
+.noticia-container .imagem > p {
+  color: white;
+}
+
+.noticia-container .imagem:hover {
+  transition: 0.7s;
+}
+
+footer {
+  background-color: #000080;
+  color: rgb(230, 230, 230);
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+}
+
+footer h1 {
+    margin-left: 15px;
+    margin-bottom: 10px;
+}
+
+footer p {
+    font-size: 15px;
+    margin-left: 15px;
+    margin-top: 15px;
 }
