--- a/estilos/style.css
+++ b/estilos/style.css
@@ -45,7 +45,7 @@ menu {
 
 menu ul {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: center;
   gap: 3px;
   list-style: none;
@@ -95,7 +95,7 @@ main {
   border: 1px solid rgb(192, 192, 192);
   border-radius: 5px;
   padding: 5px;
-  margin: 10px 10px;
+  margin: 10px 30px;
   width: 94.9%;
   height: 150px;
 }
