--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,7 +31,7 @@ header {
 header h1 {
   color: white;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.473);
-  font-size: 60px;
+  font-size: 4vw;
   font-weight: bolder;
   padding: 10px 20px 0;
   margin-top: 10px;
@@ -41,18 +41,18 @@ header h1 {
 
 menu {
   width: 100%;
+  overflow-x: auto;
 }
 
 menu ul {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   gap: 5px;
   list-style: none;
   padding: 0;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 15px;
+  margin: 10px;
 }
 
 menu li {
@@ -62,7 +62,7 @@ menu li {
 
 menu li:hover {
   background-color: #010183;
-  transition: 0.5ms;
+  transition: 0.3s;
 }
 
 menu li a {
@@ -98,69 +98,51 @@ article {
 }
 
 .em-alta {
-    font-weight: lighter;
-    text-align: left;
-    margin-left: 5px;
-
+  font-weight: lighter;
+  text-align: left;
+  margin-left: 5px;
 }
 
 #aglomerado {
-    display: inline-block;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 10px;
 }
 
-.noticia-principal-1 {
-  background-color: white;
-  border: 1px solid rgb(192, 192, 192);
-  border-radius: 5px;
-  padding: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 5px;
-  width: 50%;
-  height: 240px;
-}
-
-.noticia-principal-1 a {
-  font-size: 40px;
-  color: #000080;
-  text-decoration: none;
-}
-
-.noticia-principal-1 li {
-    margin-bottom: 5px;
-    list-style-type: disc;
-    list-style-position: inside;
-}
-
+/* Responsivo com base em porcentagem */
+.noticia-principal-1,
 .noticia-principal-2 {
   background-color: white;
   border: 1px solid rgb(192, 192, 192);
   border-radius: 5px;
   padding: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 5px;  width: 50%;
-  height: 155px;
+  margin: 10px 5px;
+  width: 48%;
+  min-width: 280px;
+  flex: 1;
+  box-sizing: border-box;
 }
 
+.noticia-principal-1 {
+  height: auto;
+}
+.noticia-principal-2 {
+  height: auto;
+}
+
+.noticia-principal-1 a,
 .noticia-principal-2 a {
-  font-size: 40px;
+  font-size: 1.8em;
   color: #000080;
   text-decoration: none;
 }
 
+.noticia-principal-1 li,
 .noticia-principal-2 li {
-    margin-bottom: 5px;
-    list-style-type: disc;
-    list-style-position: inside;
-}
-
-.noticia-container-2 .subititulo {
-  font-size: 17x;
-  color: black;
-  margin-left: 5px;
+  margin-bottom: 5px;
+  list-style-type: disc;
+  list-style-position: inside;
 }
 
 .noticia-container {
@@ -168,9 +150,10 @@ article {
   border: 1px solid rgb(192, 192, 192);
   border-radius: 5px;
   padding: 5px;
-  margin: 10px 30px;
-  width: 94.9%;
-  height: 150px;
+  margin: 10px auto;
+  width: 95%;
+  max-width: 1000px;
+  height: auto;
 }
 
 .noticia-container .categoria {
@@ -181,53 +164,61 @@ article {
 
 .noticia-container .titulo {
   color: #000080;
-  font-size: 25px;
+  font-size: 1.5em;
   margin-left: 5px;
 }
 
 .noticia-container .subititulo {
-  font-size: 17x;
+  font-size: 1em;
   color: black;
   margin-left: 5px;
-}
-
-/*
-.noticia-container .imagem {
-  background-image: url();
-  background-size: cover;
-  background-position: center;
-  border-radius: 5px;
-  width: 100%;
-  height: 300px;
-} */ 
-
-.noticia-container .imagem > h1,
-.noticia-container .imagem > p {
-  color: white;
-}
-
-.noticia-container .imagem:hover {
-  transition: 0.7s;
 }
 
 footer {
   background-color: #000080;
   color: rgb(230, 230, 230);
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100px;
+  padding: 20px 10px;
   display: flex;
   flex-direction: column;
 }
 
-footer h1 {
-    margin-left: 15px;
-    margin-bottom: 10px;
+footer h1,
+footer p {
+  margin-left: 15px;
 }
 
-footer p {
-    font-size: 15px;
-    margin-left: 15px;
-    margin-top: 15px;
+/* ---------------------------
+   MEDIA QUERIES PARA CELULARES
+----------------------------- */
+
+@media (max-width: 768px) {
+  header h1 {
+    font-size: 7vw;
+  }
+
+  menu ul {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  #aglomerado {
+    flex-direction: column;
+  }
+
+  .noticia-principal-1,
+  .noticia-principal-2 {
+    width: 100%;
+    margin: 10px 0;
+  }
+
+  .noticia-container {
+    width: 95%;
+    margin: 10px auto;
+  }
+
+  .noticia-principal-1 a,
+  .noticia-principal-2 a {
+    font-size: 1.5em;
+  }
 }
