--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -13,6 +13,19 @@
 }
 
     @media (min-width: 800px) and (max-width: 1500px) {
+      
+  menu ul {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px;
+  list-style: none;
+  padding: 0;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 15px;
+}
+
   .noticias-principais {
     display: flex;
     gap: 20px;
