--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,7 +31,7 @@ header {
 header h1 {
   color: white;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.473);
-  font-size: 4vw;
+  font-size: 60px;
   font-weight: bolder;
   padding: 10px 20px 0;
   margin-top: 10px;
@@ -41,18 +41,18 @@ header h1 {
 
 menu {
   width: 100%;
-  overflow-x: auto;
 }
 
 menu ul {
   display: flex;
-  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   gap: 5px;
   list-style: none;
   padding: 0;
-  margin: 10px;
+  margin-top: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 menu li {
@@ -62,14 +62,14 @@ menu li {
 
 menu li:hover {
   background-color: #010183;
-  transition: 0.3s;
+  transition: 0.5ms;
 }
 
 menu li a {
   display: flex;
   align-items: center;
-  gap: 4px;
-  font-size: 18px;
+  gap: 4.5px;
+  font-size: 18.5px;
   color: rgb(230, 230, 230);
   text-decoration: none;
 }
@@ -98,51 +98,69 @@ article {
 }
 
 .em-alta {
-  font-weight: lighter;
-  text-align: left;
-  margin-left: 5px;
+    font-weight: lighter;
+    text-align: left;
+    margin-left: 5px;
+
 }
 
 #aglomerado {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 10px;
+    display: inline-block;
 }
 
-/* Responsivo com base em porcentagem */
-.noticia-principal-1,
+.noticia-principal-1 {
+  background-color: white;
+  border: 1px solid rgb(192, 192, 192);
+  border-radius: 5px;
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 1px;
+  width: 50%;
+  height: 240px;
+}
+
+.noticia-principal-1 a {
+  font-size: 40px;
+  color: #000080;
+  text-decoration: none;
+}
+
+.noticia-principal-1 li {
+    margin-bottom: 5px;
+    list-style-type: disc;
+    list-style-position: inside;
+}
+
 .noticia-principal-2 {
   background-color: white;
   border: 1px solid rgb(192, 192, 192);
   border-radius: 5px;
   padding: 5px;
-  margin: 10px 5px;
-  width: 48%;
-  min-width: 280px;
-  flex: 1;
-  box-sizing: border-box;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 5px;  width: 50%;
+  height: 155px;
 }
 
-.noticia-principal-1 {
-  height: auto;
-}
-.noticia-principal-2 {
-  height: auto;
-}
-
-.noticia-principal-1 a,
 .noticia-principal-2 a {
-  font-size: 1.8em;
+  font-size: 40px;
   color: #000080;
   text-decoration: none;
 }
 
-.noticia-principal-1 li,
 .noticia-principal-2 li {
-  margin-bottom: 5px;
-  list-style-type: disc;
-  list-style-position: inside;
+    margin-bottom: 5px;
+    list-style-type: disc;
+    list-style-position: inside;
+}
+
+.noticia-container-2 .subititulo {
+  font-size: 17x;
+  color: black;
+  margin-left: 5px;
 }
 
 .noticia-container {
@@ -150,10 +168,9 @@ article {
   border: 1px solid rgb(192, 192, 192);
   border-radius: 5px;
   padding: 5px;
-  margin: 10px auto;
-  width: 95%;
-  max-width: 1000px;
-  height: auto;
+  margin: 10px 30px;
+  width: 94.9%;
+  height: 150px;
 }
 
 .noticia-container .categoria {
@@ -164,61 +181,53 @@ article {
 
 .noticia-container .titulo {
   color: #000080;
-  font-size: 1.5em;
+  font-size: 25px;
   margin-left: 5px;
 }
 
 .noticia-container .subititulo {
-  font-size: 1em;
+  font-size: 17x;
   color: black;
   margin-left: 5px;
+}
+
+/*
+.noticia-container .imagem {
+  background-image: url();
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+  width: 100%;
+  height: 300px;
+} */ 
+
+.noticia-container .imagem > h1,
+.noticia-container .imagem > p {
+  color: white;
+}
+
+.noticia-container .imagem:hover {
+  transition: 0.7s;
 }
 
 footer {
   background-color: #000080;
   color: rgb(230, 230, 230);
+  top: 0;
+  left: 0;
   width: 100%;
-  padding: 20px 10px;
+  height: 100px;
   display: flex;
   flex-direction: column;
 }
 
-footer h1,
-footer p {
-  margin-left: 15px;
+footer h1 {
+    margin-left: 15px;
+    margin-bottom: 10px;
 }
 
-/* ---------------------------
-   MEDIA QUERIES PARA CELULARES
------------------------------ */
-
-@media (max-width: 768px) {
-  header h1 {
-    font-size: 7vw;
-  }
-
-  menu ul {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  #aglomerado {
-    flex-direction: column;
-  }
-
-  .noticia-principal-1,
-  .noticia-principal-2 {
-    width: 100%;
-    margin: 10px 0;
-  }
-
-  .noticia-container {
-    width: 95%;
-    margin: 10px auto;
-  }
-
-  .noticia-principal-1 a,
-  .noticia-principal-2 a {
-    font-size: 1.5em;
-  }
+footer p {
+    font-size: 15px;
+    margin-left: 15px;
+    margin-top: 15px;
 }
