--- a/estilos/style.css
+++ b/estilos/style.css
@@ -45,13 +45,13 @@ menu {
 
 menu ul {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   gap: 5px;
   list-style: none;
   padding: 0;
   margin-top: 10px;
-  margin-left: 60px;
+  margin-left: 15px;
   margin-right: 15px;
 }
 
@@ -140,7 +140,7 @@ article {
   padding: 5px;
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-left: 20px;
+  margin-left: 10px;
   margin-right: 5px;  width: 50%;
   height: 155px;
 }
