--- a/estilos/style.css
+++ b/estilos/style.css
@@ -45,13 +45,13 @@ menu {
 
 menu ul {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   gap: 5px;
   list-style: none;
   padding: 0;
   margin-top: 10px;
-  margin-left: 30px;
+  margin-left: 20px;
   margin-right: 15px;
 }
 
