--- a/estilos/style.css
+++ b/estilos/style.css
@@ -114,7 +114,7 @@ article {
   margin-bottom: 10px;
   margin-left: 10px;
   margin-right: 1px;
-  width: 90%;
+  width: 80%;
   height: 240px;
 }
 
@@ -160,7 +160,7 @@ article {
   margin-left: 5px;
 }
 
-.noticia-container {
+/* .noticia-container {
   background-color: white;
   border: 1px solid rgb(192, 192, 192);
   border-radius: 5px;
@@ -168,7 +168,7 @@ article {
   margin: 10px 30px;
   width: 94.9%;
   height: 150px;
-}
+} */
 
 .noticia-container .categoria {
   color: rgb(43, 43, 43);
