--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,9 +31,9 @@ header {
 header h1 {
   color: white;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.473);
-  font-size: 32px;
+  font-size: 35px;
   font-weight: bolder;
-  padding: 10px;
+  margin-top: 15px;
   text-align: center;
   width: 100%;
 }
@@ -44,7 +44,7 @@ menu {
 
 menu ul {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 10px;
   padding: 10px;
   list-style: none;
@@ -106,7 +106,7 @@ article {
   border-radius: 5px;
   padding: 10px;
   margin: 10px auto;
-  width: 100%;
+  width: 90%;
   height: auto;
 }
 
