--- a/estilos/style.css
+++ b/estilos/style.css
@@ -105,9 +105,12 @@ article {
   border: 1px solid rgb(192, 192, 192);
   border-radius: 5px;
   padding: 10px;
-  margin: 10px auto;
-  width: 90%;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 80%;
   height: auto;
+
 }
 
 .noticia-principal-1 a,
