--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,34 +1,25 @@
-@media print { /* IMPRESSÃO */
+@media print {
+  main h1 {
+    font-family: 'Courier New', Courier, monospace;
+    text-shadow: none;
+    color: black;
+  }
 
-    main h1{
-        font-family: 'Courier New', Courier, monospace;
-        text-shadow: none;
-        color: black;
-    }
-
-    header{
-        content: none;
-    }
-
-}
-
-@media (landscape) {
-
+  header {
+    display: none;
+  }
 }
 
 @media (min-width: 800px) and (max-width: 1500px) {
-      
   menu ul {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 5px;
-  list-style: none;
-  padding: 0;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 15px;
-}
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 5px;
+    padding: 0;
+    margin: 10px 15px 0 10px;
+    list-style: none;
+  }
 
   .noticias-principais {
     display: flex;
@@ -41,9 +32,11 @@
   .noticia-principal-1,
   .noticia-principal-2 {
     flex: 1 1 45%;
-    background-color: #ffffff;
-    padding: 15px;
+    background-color: #ffff;
+    color: rgb(44, 44, 44);
     border-radius: 10px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    margin: 5px;
+    width: 100%;
   }
 }
