--- a/estilos/style.css
+++ b/estilos/style.css
@@ -108,8 +108,8 @@ article {
   margin-top: 5px;
   margin-left: 5px;
   margin-right: 5px;
-  width: 98%;
-  height: auto;
+  width: 99%;
+  height: 170px;
 
   display: flex;
   flex-wrap: wrap;
