--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,7 +44,7 @@ menu {
 
 menu ul {
   display: flex;
-  flex-direction: row;
+  flex-direction: flex;
   gap: 10px;
   padding: 10px;
   list-style: none;
@@ -65,6 +65,7 @@ menu li a {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   gap: 5px;
   font-size: 16px;
   color: rgb(230, 230, 230);
@@ -107,7 +108,7 @@ article {
   padding: 10px;
   margin-top: 5px;
   margin-left: 5px;
-  width: 99%;
+  width: 99.9%;
   height: 170px;
 
   display: flex;
