--- a/estilos/style.css
+++ b/estilos/style.css
@@ -107,9 +107,10 @@ article {
   border-radius: 5px;
   padding: 10px;
   margin-top: 5px;
-  margin-left: 5px;
+  margin-left: 4px;
+  margin-right: 4px;
   width: 99.9%;
-  height: 170px;
+  height: 180px;
 
   display: flex;
   flex-wrap: wrap;
