--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,7 +25,7 @@ header {
   z-index: 1000;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 }
 
 header h1 {
@@ -44,7 +44,8 @@ menu {
 
 menu ul {
   display: flex;
-  flex-direction: flex;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
   padding: 10px;
   list-style: none;
@@ -112,10 +113,8 @@ article {
   margin-right: 4px;
   width: 99.9%;
   height: 180px;
-
   display: flex;
   flex-wrap: wrap;
-
 }
 
 .noticia-principal-1 a,
