--- a/estilos/style.css
+++ b/estilos/style.css
@@ -113,8 +113,8 @@ article {
   margin-left: 4px;
   margin-right: 4px;
   margin-bottom: 10px;
-  width: 99.5%;
-  height: 180px;
+  width: 98%;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
 }
