--- a/estilos/style.css
+++ b/estilos/style.css
@@ -210,9 +210,12 @@ article {
 .noticia-imagem {
   background-image: url(../media/conto-para-guto.jpeg);
   background-repeat: no-repeat;
-  position: 0;
+  background-size: cover;
+  background-position: center;
+  display: block;
+  width: 100%;
   height: 120px;
-} 
+}
 
 hr {
     height: 1px;
