--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,6 +40,7 @@ header h1 a {
   margin-top: 10px;
   margin-bottom: 1px;
   text-align: center;
+  align-items: center;
   width: 100%;
   text-decoration: none;
 }
@@ -50,12 +51,12 @@ menu {
 
 menu ul {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   gap: 10px;
   padding: 10px;
   list-style: none;
-  text-align: center;
+  text-align: left;
 }
 
 menu li {
@@ -98,6 +99,44 @@ article {
   width: 100%;
 }
 
+article h1 {
+  color: black;
+  font-size: 40px;
+  font-weight: bolder;
+  margin-top: 10px;
+  margin-bottom: 1px;
+  text-align: center;
+  width: 100%;
+  text-decoration: none;
+}
+
+article p {
+  font-size: 17px;
+  line-height: 1.7;
+  color: #111;
+  margin-left: 400px;
+  margin-bottom: 15px;
+}
+
+.autor-data {
+  font-size: 15px;
+  margin-left: 400px;
+  line-height: 12px;
+  text-align: left;
+}
+
+.autor-data strong {
+  color: #000080;
+}
+
+article img {
+  width: 500px;
+  border-radius: 10px;
+  align-items: center;
+  margin-top: 10px;
+  margin-left: 400px;
+}
+
 #aglomerado {
   display: inline-block;
 }
@@ -109,9 +148,9 @@ article {
   border-radius: 1.5px;
   padding: 10px;
   margin-top: 5px;
-  margin-left: 4px;
-  margin-right: 4px;
-  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
   width: 98%;
   height: 200px auto;
   display: flex;
@@ -159,15 +198,6 @@ article {
   margin-left: 5px;
 }
 
-.noticia-container .imagem > h1,
-.noticia-container .imagem > p {
-  color: white;
-}
-
-.noticia-container .imagem:hover {
-  transition: 0.7s;
-}
-
 .em-alta h1 {
   font-weight: lighter;
   text-align: left;
@@ -183,14 +213,13 @@ article {
 
   padding: 10px;
   margin-top: 15px;
-  margin-left: 3px;
+  margin-left: 5px;
   margin-right: 2.5px;
   margin-bottom: 5px;
-  width: 98%;
+  width: 99.1%;
   height: 200px auto;
   display: flex;
   flex-wrap: wrap;
-
 }
 
 .em-alta .titulo {
@@ -208,13 +237,33 @@ article {
 }
 
 .noticia-imagem {
+  background-color: #bdbdbdc5;
   background-image: url(../media/conto-para-guto.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   display: block;
-  width: 100%;
+  width: 99.1%;
   height: 120px;
+
+  border-radius: 1.5px;
+  padding: 10px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 4px;
+  margin-bottom: 10px;
+  height: 200px auto;
+}
+
+.noticia-imagem .titulo,
+.noticia-imagem .subititulo {
+  color: white;
+}
+
+.noticia-imagem .titulo,
+.noticia-imagem .subititulo:hover {
+  color: rgb(248, 248, 248);
+  transition: 0.7s;
 }
 
 hr {
@@ -224,6 +273,47 @@ hr {
     border: none;
     margin-top: 5px;
     align-items: center;
+}
+
+.comentarios {
+  font-size: 17px;
+  line-height: 1.7;
+  margin-bottom: 15px;
+}
+
+.comentarios h2 {
+  color: black;
+  font-size: 35px;
+  font-weight: bolder;
+  margin-top: 10px;
+  margin-left: 400px;
+  margin-bottom: 1px;
+  text-align: left;
+  width: 100%;
+  text-decoration: none;
+}
+
+.comentarios p {
+  color: rgb(19, 19, 19);
+  font-size: 15.5px;
+  font-weight: lighter;
+  text-align: left;
+}
+
+input {
+  width: 40%;
+  height: 100px;
+  margin-left: 400px;
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: rgb(75, 75, 75);
+  padding-top: 1px;
+  padding-left: 10px;
+  font-size: 15.5px;
+  font-weight: lighter;
+  text-align: left;
 }
 
 footer {
