--- a/estilos/style.css
+++ b/estilos/style.css
@@ -88,14 +88,14 @@ menu li a {
 }
 
 main{
-  background-color: rgb(199, 198, 198);
-  border: 1.5px solid rgb(194, 194, 194);
+  background-color: rgb(187, 187, 187);
+  border: 1px solid rgba(194, 194, 194, 0.836);
   min-height: 300px;
   padding: 10px;
   }
 
 article {
-  background-color: rgb(175, 175, 175);
+  background-color: rgb(214, 214, 214);
   border: 1.5px solid rgb(155, 155, 155);
   width: 100%;
 }
@@ -115,13 +115,11 @@ article p {
   font-size: 17px;
   line-height: 1.7;
   color: #111;
-  margin-left: 400px;
   margin-bottom: 15px;
 }
 
 .autor-data {
   font-size: 15px;
-  margin-left: 400px;
   line-height: 12px;
   text-align: left;
 }
