--- a/estilos/style.css
+++ b/estilos/style.css
@@ -113,7 +113,7 @@ article h1 {
 
 article p {
   font-size: 17px;
-  line-height: 1.7;
+  line-height: 1.2;
   color: #111;
   margin-bottom: 15px;
   text-align: center;
@@ -132,11 +132,11 @@ article p {
 }
 
 article img {
-  width: 90%;
+  width: 50%;
   border-radius: 10px;
   align-items: center;
   margin-top: 10px;
-  text-align: center;
+  margin-left: 20%;
 }
 
 #aglomerado {
