--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,9 +23,7 @@ header {
   color: rgb(230, 230, 230);
   position: sticky;
   top: 0;
-  left: 0;
   width: 100%;
-  height: auto;
   z-index: 1000;
   display: flex;
   flex-direction: column;
@@ -37,12 +35,9 @@ header h1 a {
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.37);
   font-size: 40px;
   font-weight: bolder;
-  margin-top: 10px;
-  margin-bottom: 1px;
+  margin: 10px 0 1px;
   text-align: center;
-  align-items: center;
   width: 100%;
-  text-decoration: none;
 }
 
 menu {
@@ -51,18 +46,15 @@ menu {
 
 menu ul {
   display: flex;
-  justify-content: left;
-  align-items: left;
+  justify-content: flex-start;
   gap: 10px;
   padding: 10px;
   list-style: none;
-  text-align: left;
 }
 
 menu li {
   border-radius: 10px;
   padding: 8px 10px;
-  text-align: center;
 }
 
 menu li:hover {
@@ -74,11 +66,9 @@ menu li a {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
   gap: 5px;
   font-size: 16px;
   color: rgb(230, 230, 230);
-  text-decoration: none;
 }
 
 .material-icons,
@@ -87,12 +77,12 @@ menu li a {
   margin-top: 4px;
 }
 
-main{
+main {
   background-color: rgb(187, 187, 187);
   border: 1px solid rgba(194, 194, 194, 0.836);
   min-height: 300px;
   padding: 10px;
-  }
+}
 
 article {
   background-color: rgb(214, 214, 214);
@@ -104,25 +94,21 @@ article h1 {
   color: black;
   font-size: 40px;
   font-weight: bolder;
-  margin-top: 10px;
-  margin-bottom: 1px;
+  margin: 10px 0 1px;
   text-align: center;
-  width: 100%;
-  text-decoration: none;
 }
 
 article p {
   font-size: 17px;
   line-height: 1.2;
   color: #111;
-  margin-bottom: 15px;
+  margin: 0 10px 15px;
   text-align: center;
-  margin-right: 10px;
 }
 
 .autor-data {
   font-size: 15px;
-  line-height: 12px;
+  line-height: 1.2;
   text-align: center;
   margin-right: 10px;
 }
@@ -134,9 +120,8 @@ article p {
 article img {
   width: 50%;
   border-radius: 10px;
-  align-items: center;
-  margin-top: 10px;
-  margin-left: 20%;
+  display: block;
+  margin: 10px auto 0;
 }
 
 #aglomerado {
@@ -149,12 +134,8 @@ article img {
   border: 1px solid rgb(170, 170, 170);
   border-radius: 1.5px;
   padding: 10px;
-  margin-top: 2.5px;
-  margin-bottom: 3px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin: 2.5px 5px 3px;
   width: 98%;
-  height: 200px auto;
   display: flex;
   flex-wrap: wrap;
 }
@@ -163,7 +144,6 @@ article img {
 .noticia-principal-2 a {
   font-size: 24px;
   color: #000080;
-  text-decoration: none;
 }
 
 .noticia-principal-1 li,
@@ -181,17 +161,13 @@ article img {
 
 .noticia-container .categoria {
   color: rgb(43, 43, 43);
-  font-style: normal;
-  padding: 0px;
-  margin-top: 1px;
-  margin-bottom: -2px;
+  margin: 1px 0 -2px;
 }
 
 .noticia-container .titulo {
   color: #000080;
   font-size: 18px;
-  margin-left: 5px;
-  margin-top: 1px;
+  margin: 1px 0 0 5px;
 }
 
 .noticia-container .subititulo {
@@ -200,37 +176,29 @@ article img {
   margin-left: 5px;
 }
 
+.em-alta {
+  background-color: white;
+  border: 1px solid rgb(192, 192, 192);
+  border-radius: 1.5px;
+  padding: 10px;
+  margin: 15px 2.5px 5px 5px;
+  width: 99.1%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .em-alta h1 {
   font-weight: lighter;
   text-align: left;
   margin-left: 2px;
   width: 100%;
-  flex-basis: 100%;
-}
-
-.em-alta {
-  background-color: white;
-  border: 1px solid rgb(192, 192, 192);
-  border-radius: 1.5px;
-
-  padding: 10px;
-  margin-top: 15px;
-  margin-left: 5px;
-  margin-right: 2.5px;
-  margin-bottom: 5px;
-  width: 99.1%;
-  height: 200px auto;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .em-alta .titulo {
   font-size: 22px;
   font-weight: bolder;
-  margin-left: 5px;
-  margin-top: 5px;
-  margin-bottom: 0px;
-  line-height: 0.9
+  margin: 5px 0 0 5px;
+  line-height: 0.9;
 }
 
 .em-alta .titulo a {
@@ -244,17 +212,11 @@ article img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  display: block;
   width: 98.8%;
-  height: 1200px;
-
+  height: 200px;
   border-radius: 1.5px;
   padding: 10px;
-  margin-top: 5px;
-  margin-left: 5px;
-  margin-right: 4px;
-  margin-bottom: 10px;
-  height: 200px auto;
+  margin: 5px 4px 10px 5px;
 }
 
 .noticia-imagem .titulo,
@@ -262,19 +224,17 @@ article img {
   color: white;
 }
 
-.noticia-imagem .titulo,
 .noticia-imagem .subititulo:hover {
   color: rgb(248, 248, 248);
   transition: 0.7s;
 }
 
 hr {
-    height: 1px;
-    width: 99.8%;
-    background-color: #ccc;
-    border: none;
-    margin-top: 5px;
-    align-items: center;
+  height: 1px;
+  width: 99.8%;
+  background-color: #ccc;
+  border: none;
+  margin-top: 5px;
 }
 
 .comentarios {
@@ -287,12 +247,9 @@ hr {
   color: black;
   font-size: 35px;
   font-weight: bolder;
-  margin-top: 10px;
-  margin-left: 400px;
-  margin-bottom: 1px;
+  margin: 10px 0 1px 400px;
   text-align: left;
   width: 100%;
-  text-decoration: none;
 }
 
 .comentarios p {
@@ -311,8 +268,7 @@ input {
 input::placeholder,
 textarea::placeholder {
   color: rgb(75, 75, 75);
-  padding-top: 1px;
-  padding-left: 10px;
+  padding: 1px 0 0 10px;
   font-size: 15.5px;
   font-weight: lighter;
   text-align: left;
@@ -322,10 +278,9 @@ footer {
   background-color: #000080;
   color: rgb(230, 230, 230);
   width: 100%;
-  height: auto;
+  padding: 10px;
   display: flex;
   flex-direction: column;
-  padding: 10px;
 }
 
 footer h1 {
