--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,9 +9,10 @@
   box-sizing: border-box;
 }
 
-body, html {
+html, body {
   background-color: rgb(216, 216, 216);
   font-family: "Funnel Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 a {
@@ -46,6 +47,7 @@ menu {
 
 menu ul {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   gap: 10px;
   padding: 10px;
@@ -118,7 +120,8 @@ article p {
 }
 
 article img {
-  width: 50%;
+  width: 100%;
+  max-width: 500px;
   border-radius: 10px;
   display: block;
   margin: 10px auto 0;
@@ -135,9 +138,10 @@ article img {
   border-radius: 1.5px;
   padding: 10px;
   margin: 2.5px 5px 3px;
-  width: 98%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
+  box-sizing: border-box;
 }
 
 .noticia-principal-1 a,
@@ -181,10 +185,11 @@ article img {
   border: 1px solid rgb(192, 192, 192);
   border-radius: 1.5px;
   padding: 10px;
-  margin: 15px 2.5px 5px 5px;
-  width: 99.1%;
+  margin: 15px 5px 5px;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
+  box-sizing: border-box;
 }
 
 .em-alta h1 {
@@ -212,11 +217,12 @@ article img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  width: 98.8%;
+  width: 100%;
   height: 200px;
   border-radius: 1.5px;
   padding: 10px;
-  margin: 5px 4px 10px 5px;
+  margin: 5px 0 10px;
+  box-sizing: border-box;
 }
 
 .noticia-imagem .titulo,
@@ -231,7 +237,7 @@ article img {
 
 hr {
   height: 1px;
-  width: 99.8%;
+  width: 100%;
   background-color: #ccc;
   border: none;
   margin-top: 5px;
@@ -260,9 +266,11 @@ hr {
 }
 
 input {
-  width: 50%;
+  width: 100%;
+  max-width: 500px;
   height: 100px;
-  margin-left: 0px;
+  margin-left: 0;
+  box-sizing: border-box;
 }
 
 input::placeholder,
