--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -12,13 +12,13 @@
 
 @media (min-width: 800px) and (max-width: 1500px) {
   menu ul {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 5px;
-    padding: 0;
-    margin: 10px 15px 0 10px;
-    list-style: none;
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  gap: 10px;
+  padding: 10px;
+  list-style: none;
+  text-align: left;
   }
 
   .noticias-principais {
