--- a/estilos/style.css
+++ b/estilos/style.css
@@ -51,12 +51,12 @@ menu {
 
 menu ul {
   display: flex;
-  justify-content: left;
-  align-items: left;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
   padding: 10px;
   list-style: none;
-  text-align: left;
+  text-align: center;
 }
 
 menu li {
