--- a/estilos/style.css
+++ b/estilos/style.css
@@ -286,9 +286,8 @@ hr {
   font-size: 35px;
   font-weight: bolder;
   margin-top: 10px;
-  margin-left: 400px;
   margin-bottom: 1px;
-  text-align: left;
+  text-align: center;
   width: 100%;
   text-decoration: none;
 }
