--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,7 +19,7 @@ a {
 }
 
 header {
-  background-color: #000080;
+  background-color: rgb(136, 255, 0);
   color: rgb(230, 230, 230);
   position: sticky;
   top: 0;
