--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,7 +19,7 @@ a {
 }
 
 header {
-  background-color: rgb(0, 255, 200) /*#000080 */;
+  background-color: #000080 ;
   color: rgb(230, 230, 230);
   position: sticky;
   top: 0;
@@ -66,7 +66,7 @@ menu li {
 }
 
 menu li:hover {
-  background-color: #010183;
+  background-color: #00009486;
   transition: 0.2s;
 }
 
@@ -124,7 +124,7 @@ article p {
 
   line-height: 12px;
   text-align: left;
-  margin-left: 25px;
+  margin-left: 50px;
 }
 
 .autor-data strong {
@@ -243,7 +243,7 @@ article img {
   background-image: url(../media/conto-para-guto.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: top;
   align-items: center;
   display: block;
   width: 50%;
@@ -251,10 +251,10 @@ article img {
   border-radius: 1.5px;
   padding: 10px;
   margin-top: 5px;
-  margin-left: 350px;
-  margin-right: 4px;
+  margin-left: 5px;
+  margin-right: 5px;
   margin-bottom: 10px;
-  height: 400px;
+  height: 550px;
 }
 
 .noticia-imagem .titulo,
