--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -53,3 +53,69 @@
 }
 
 }
+
+@media screen and (min-width: 768px) and (max-width: 992px) { /* CONFIGURAÇÃO PARA TABLET */
+    body {
+        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+    }
+
+    section#login {
+        width: 80vw;
+        height: 280px;
+    }
+
+    section#login > div#imagem {
+        float: left;
+        width: 30%;
+        height: 100%;
+    }
+
+    section#login > div#formulario {
+        float: right;
+        width: 70%;
+    }
+}
+
+@media screen and (min-width: 992px) { /* CONFIGURAÇÕES PARA DESKTOP */
+    menu ul {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    gap: 10px;
+    padding: 10px;
+    list-style: none;
+    text-align: left;
+    }
+
+    .noticias-principais {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-bottom: 30px;
+    }
+
+    .noticia-principal-1,
+    .noticia-principal-2 {
+      flex: 1 1 45%;
+      width: 100%;
+    }
+
+    .comentarios p {
+      margin-left: 300px;
+  }
+
+    button {
+    font-family: "Funnel Sans";
+    padding: 10px;
+    background-color: #000080;
+    color: white;
+    border: none;
+    cursor: pointer;
+    width: 90px;
+    transition: 0.3s;
+    margin-left: 500px;
+    margin-bottom: 10px;
+  }
+
+}
