--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,7 +19,7 @@ a {
 }
 
 header {
-  background-color: rgb(73, 128, 0) /*000080*/ ;
+  background-color: #000080 ;
   color: rgb(230, 230, 230);
   position: sticky;
   top: 0;
@@ -248,7 +248,7 @@ article img {
   
   display: block;
   width: 50%;
-  height: 550px;
+  height: 600px;
   border-radius: 1.5px;
   padding: 10px;
   margin: 5px auto;
@@ -336,7 +336,7 @@ button {
   cursor: pointer;
   width: 90px;
   transition: 0.3s;
-  margin-left: 5px;
+  margin-left: 10px;
   margin-bottom: 10px;
 }
 
@@ -344,12 +344,78 @@ button:hover {
   background-color: #000066;
 }
 
-input {
-  width: 400px;
-  height: 100px;
+.comentario p {
+  padding: 15px;
+}
+
+.comentario .material-icons {
+  vertical-align: middle;
+  position: relative;
+  top: -2px;
+  bottom: 5px;
+  font-size: 18px;
+}
+
+.login {
   margin: 5px;
-  padding: 0 5px 80px 5px;
-  text-align: left;
+}
+
+.login p, a {
+  top: -5px;
+  text-align: center;
+  line-height: 19px;
+}
+
+.campo {
+  background-color: #000080;
+  color: white;
+  width: 22%;
+  margin-bottom: 10px;
+  border-radius: 5px;
+
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px; 
+}
+
+.campo:hover {
+  background-color: #000066;
+}
+
+.campo label {
+  position: relative;
+  top: -1px;
+  display: inline-block; 
+}
+
+.campo input {
+  position: relative;
+  padding-left: 2.5px;
+  top: -1px;
+  display: inline-block; 
+}
+
+input[type="submit"] {
+  background-color: #000080;
+  color: white;
+  width: 15%;
+  border-radius: 5px;
+  padding: 5px;
+  border: none;
+
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+  background-color: #000066;
 }
 
 footer {
