--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,23 +25,22 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
+  height: 110px;
   z-index: 1000;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 15px;
 }
+
 
 header h1 a {
   color: white;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.37);
   font-size: 40px;
   font-weight: bolder;
-  margin-top: 10px;
-  margin-bottom: 1px;
   text-align: center;
   align-items: center;
-  width: 100%;
   text-decoration: none;
 }
 
@@ -100,17 +99,6 @@ article {
   width: 100%;
 }
 
-article h1 {
-  color: black;
-  font-size: 40px;
-  font-weight: bolder;
-  margin-top: 10px;
-  margin-bottom: 1px;
-  text-align: center;
-  width: 100%;
-  text-decoration: none;
-}
-
 article p {
   font-size: 17px;
   line-height: 1.7;
@@ -158,6 +146,7 @@ article img {
   height: 200px auto;
   display: flex;
   flex-wrap: wrap;
+  text-align: left !important;
 }
 
 .noticia-principal-1 a,
@@ -193,6 +182,10 @@ article img {
   font-size: 18px;
   margin-left: 5px;
   margin-top: 1px;
+}
+
+.noticia-container .titulo {
+  text-align: left;
 }
 
 .noticia-container .subititulo {
@@ -288,11 +281,10 @@ hr {
   color: black;
   font-size: 35px;
   font-weight: bolder;
-  margin-top: 10px;
-  margin-bottom: 1px;
+  margin-top: 15px;
+  margin-bottom: 10px;
   text-align: center;
   width: 100%;
-  text-decoration: none;
 }
 
 .comentarios p {
@@ -372,6 +364,7 @@ button:hover {
   width: 22%;
   margin-bottom: 10px;
   border-radius: 5px;
+  padding: 10px;
 
   margin-left: auto;
   margin-right: auto;
