--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,7 +20,7 @@ a {
 }
 
 header {
-  background-color: peru /*#000080*/  ;
+  background-color: rgb(90, 4, 4) /*#000080*/  ;
   color: rgb(230, 230, 230);
   position: sticky;
   top: 0;
