--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,7 +20,7 @@ a {
 }
 
 header {
-  background-color: rgb(90, 4, 4) /*#000080*/  ;
+  background-color: #000080  ;
   color: rgb(230, 230, 230);
   position: sticky;
   top: 0;
@@ -139,10 +139,7 @@ article img {
   border: 1px solid rgb(192, 192, 192);
   border-radius: 1.5px;
   padding: 10px;
-  margin-top: 5px;
-  margin-left: 2.5px;
-  margin-right: 2.5px;
-  margin-bottom: 5px;
+  margin: 5px;
   width: 98%;
   height: 200px auto;
   display: flex;
@@ -155,7 +152,7 @@ article img {
   font-size: 24px;
   color: #000080;
   text-decoration: none;
-  margin-right: 0.1px;
+  margin-bottom: 1px;
   margin-top: 90px;
 }
 
@@ -166,30 +163,30 @@ article img {
   padding-left: 5px;
 }
 
-
-
 .noticia-container-2 .subititulo {
   font-size: 14px;
   color: black;
   margin-left: 2px;
 }
 
-.noticia-container .categoria {
+.categoria {
   color: rgb(43, 43, 43);
   font-style: normal;
   padding: 0px;
-  margin-top: 1px;
-  margin-bottom: -2px;
+  margin-left: 1px;
+  top: -5px;
+  bottom: -5px;
 }
 
-.noticia-container .titulo {
+.titulo {
   color: #000080;
-  font-size: 18px;
-  margin-left: 5px;
+  font-size: 35px;
+  margin: 10px 15px 10px 10px;
   margin-top: 1px;
 }
 
 .noticia-container .titulo {
+  margin-left: 500px;
   text-align: left;
 }
 
@@ -213,10 +210,7 @@ article img {
   border-radius: 1.5px;
 
   padding: 10px;
-  margin-top: 15px;
-  margin-left: 5px;
-  margin-right: 2.5px;
-  margin-bottom: 5px;
+  margin: 5px;
   width: 99.1%;
   height: 200px auto;
   display: flex;
@@ -354,66 +348,79 @@ button:hover {
 }
 
 .login {
-  margin: 5px;
+  padding: 30px;
+  border-radius: 12px;
+  max-width: 500px;
+  margin: 40px auto;
 }
 
-.login p, a {
-  top: -5px;
-  text-align: center;
-  line-height: 19px;
+.login h1 {
+  font-size: 28px;
+  color: #000080;
+  margin-bottom: 10px;
+}
+
+.login p {
+  font-size: 15px;
+  margin-bottom: 25px;
+  line-height: 1.5;
 }
 
 .campo {
-  background-color: #000080;
-  color: white;
-  width: 22%;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  padding: 10px;
-
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5px; 
-}
-
-.campo:hover {
-  background-color: #000066;
-}
-
-.campo label {
-  position: relative;
-  top: -1px;
-  display: inline-block; 
+  flex-direction: column;
+  margin-bottom: 15px;
 }
 
 .campo input {
+  padding: 12px;
+  font-size: 16px;
+  border: 1px solid #c0c0c0;
+  border-radius: 6px;
+  outline: none;
+  transition: 0.2s;
+}
+
+.campo input:focus {
+  border-color: #000080;
+  box-shadow: 0 0 5px rgba(0, 0, 128, 0.2);
+}
+
+.campo label {
+  top: -5px;
+}
+
+label .material-icons {
+  vertical-align: middle;
   position: relative;
-  padding-left: 2.5px;
-  top: -1px;
-  display: inline-block; 
+  top: -2px;
+  bottom: 5px;
+  font-size: 19px;
 }
 
 input[type="submit"] {
   background-color: #000080;
   color: white;
-  width: 15%;
-  border-radius: 5px;
-  padding: 5px;
   border: none;
-
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.3s ease;
+  padding: 10px;
+  border-radius: 6px;
+  font-size: 16px;
+  width: 100%;
+  margin-top: 10px;
+  margin-left: -15px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 input[type="submit"]:hover {
   background-color: #000066;
+}
+
+.login p a {
+  display: inline-block;
+  margin-top: 10px;
+  font-size: 15px;
+  color: #000080;
 }
 
 footer {
@@ -427,7 +434,7 @@ footer {
 }
 
 footer h3 {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 0px;
 }
 
