--- a/estilos/style.css
+++ b/estilos/style.css
@@ -41,7 +41,7 @@ a {
 
 header {
   font-family: "Funnel Sans", arial;
-  background-color: palevioletred /*var(--azul-principal)*/;
+  background-color: #048000;
   color: var(--texto-secundario);
   position: sticky;
   top: 0;
@@ -180,10 +180,11 @@ article img {
   padding-left: 5px;
 }
 
-.noticia-container-2 .subititulo {
+.noticia-container-2 .subititulo,
+.noticia-container .subititulo {
   font-size: 14px;
   color: black;
-  margin-left: 2px;
+  margin-left: 5px;
 }
 
 .categoria {
@@ -204,12 +205,6 @@ article img {
 .noticia-container .titulo {
   margin-left: 500px;
   text-align: left;
-}
-
-.noticia-container .subititulo {
-  font-size: 14px;
-  color: black;
-  margin-left: 5px;
 }
 
 .em-alta h1 {
@@ -271,22 +266,22 @@ article img {
   transition: 0.7s;
 }
 
-hr {
+hr,
+.comentarios hr {
   height: 1px;
-  width: 99.8%;
   background-color: var(--cinza-hr);
   border: none;
+}
+
+hr {
+  width: 99.8%;
   margin-top: 5px;
   align-items: center;
 }
 
 .comentarios hr {
-  height: 1px;
   width: 80%;
-  background-color: var(--cinza-hr);
-  border: none;
-  margin-top: 5px;
-  margin: 5px auto; 
+  margin: 5px auto;
 }
 
 .comentarios h2 {
@@ -324,9 +319,7 @@ textarea {
   width: 300px;
   height: 100px;
   padding: 10px;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 15px;
+  margin: 0 5px 15px;
   font-size: 16px;
   resize: none;
 }
@@ -370,8 +363,7 @@ button:hover {
 .login h1 {
   font-size: 28px;
   color: var(--azul-principal);
-  margin-bottom: 10px;
-  margin-top: -55px;
+  margin: -55px 0 10px;
 }
 
 .login p {
@@ -386,7 +378,8 @@ button:hover {
   margin-bottom: 15px;
 }
 
-.campo input {
+.campo input,
+.campo select {
   padding: 12px;
   font-size: 16px;
   border: 1px solid var(--cinza-borda);
@@ -395,9 +388,15 @@ button:hover {
   transition: 0.2s;
 }
 
-.campo input:focus {
+.campo input:focus,
+.campo select:focus {
   border-color: var(--azul-principal);
   box-shadow: 0 0 5px rgba(0, 0, 128, 0.2);
+}
+
+.campo select {
+  background-color: white;
+  color: #000000;
 }
 
 .campo label {
@@ -428,6 +427,10 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
   background-color: var(--azul-hover);
+}
+
+input[type="date"] {
+  font-family: "Funnel sans", arial;
 }
 
 .login p a {
